[gd_scene load_steps=39 format=3 uid="uid://b7qs5p0n45xo0"]

[ext_resource type="Texture2D" uid="uid://cc7fjq0a32gy" path="res://Sauce/Sprites/Char-Thug.png" id="1_je0g2"]
[ext_resource type="Script" path="res://Scripts/CharThug.gd" id="1_kkr6x"]
[ext_resource type="PackedScene" uid="uid://js6bstjv7jx5" path="res://Scenes/InGame/JohnUI.tscn" id="2_oxvks"]
[ext_resource type="Texture2D" uid="uid://bih13ymnwpep7" path="res://Sauce/Sprites/Effect-Shock.png" id="3_eecof"]
[ext_resource type="PackedScene" uid="uid://knysmdogwn50" path="res://Scenes/InGame/BoxHitbox.tscn" id="3_hio2p"]
[ext_resource type="PackedScene" uid="uid://dxjxphxmghgiq" path="res://Scenes/InGame/BoxHurtbox.tscn" id="4_idwix"]
[ext_resource type="AudioStream" uid="uid://c88ko7ikq2xov" path="res://Sauce/Sounds/InGameFight-EnemyAlert.mp3" id="6_t0mlw"]
[ext_resource type="AudioStream" uid="uid://dmwmew5sr5u85" path="res://Sauce/Sounds/InGameFight-EnemyDied.mp3" id="7_4ipkq"]
[ext_resource type="AudioStream" uid="uid://3qctgg8soy26" path="res://Sauce/Sounds/InGameFight-EnemyHurt.mp3" id="8_d83s2"]
[ext_resource type="AudioStream" uid="uid://4o83h8neeyfb" path="res://Sauce/Sounds/InGameFight-Attack.mp3" id="9_n3yv2"]
[ext_resource type="AudioStream" uid="uid://b702qkviqbt7x" path="res://Sauce/Sounds/InGameFight-EnemyParried.mp3" id="9_ud3vm"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wmkt7"]
size = Vector2(10, 2)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_af2hp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0s0yk"]
resource_local_to_scene = true
size = Vector2(10, 24)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_40yny"]
resource_local_to_scene = true
size = Vector2(115.931, 80)

[sub_resource type="Animation" id="Animation_4qr4w"]
resource_name = "Attack"
length = 0.70001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Hinge/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [16, 17, 18, 19, 20, 21, 22]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1, 0.3, 0.4, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"values": [{
"args": [],
"method": &"ParryAvailable"
}, {
"args": [],
"method": &"ParryOut"
}, {
"args": [],
"method": &"ExecuteAttack"
}, {
"args": [],
"method": &"BackToIdle"
}]
}

[sub_resource type="Animation" id="Animation_0yes3"]
resource_name = "Dead"
length = 1.50001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Hinge/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [26, 26]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"Die"
}]
}

[sub_resource type="Animation" id="Animation_xwwyr"]
resource_name = "Hurt"
length = 0.60001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Hinge/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [12, 14]
}

[sub_resource type="Animation" id="Animation_88iah"]
resource_name = "Idle"
length = 0.80001
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Hinge/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [1, 1, 0, 0]
}

[sub_resource type="Animation" id="Animation_weby2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Hinge/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_o71cg"]
resource_name = "Walk"
length = 0.60001
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Hinge/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [5, 6, 7, 8, 9, 10]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_px8xr"]
_data = {
"Attack": SubResource("Animation_4qr4w"),
"Dead": SubResource("Animation_0yes3"),
"Hurt": SubResource("Animation_xwwyr"),
"Idle": SubResource("Animation_88iah"),
"RESET": SubResource("Animation_weby2"),
"Walk": SubResource("Animation_o71cg")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_s22bb"]
animation = &"Attack"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_l1viq"]
animation = &"Dead"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_qdr67"]
animation = &"Hurt"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_7mp0g"]
animation = &"Idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_30kpx"]
animation = &"Walk"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_211xu"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_8oali"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_jptoq"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_srd33"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_8xcun"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_4ylk1"]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_hduhk"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_rqikp"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_wixrx"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_hpua4"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_1bfio"]
states/Attack/node = SubResource("AnimationNodeAnimation_s22bb")
states/Attack/position = Vector2(402, 10)
states/Dead/node = SubResource("AnimationNodeAnimation_l1viq")
states/Dead/position = Vector2(549, 172)
states/Hurt/node = SubResource("AnimationNodeAnimation_qdr67")
states/Hurt/position = Vector2(402, 199)
states/Idle/node = SubResource("AnimationNodeAnimation_7mp0g")
states/Idle/position = Vector2(317, 100)
states/Walk/node = SubResource("AnimationNodeAnimation_30kpx")
states/Walk/position = Vector2(490, 100)
transitions = ["Start", "Idle", SubResource("AnimationNodeStateMachineTransition_211xu"), "Idle", "Attack", SubResource("AnimationNodeStateMachineTransition_8oali"), "Idle", "Walk", SubResource("AnimationNodeStateMachineTransition_jptoq"), "Walk", "Idle", SubResource("AnimationNodeStateMachineTransition_srd33"), "Attack", "Idle", SubResource("AnimationNodeStateMachineTransition_8xcun"), "Hurt", "Idle", SubResource("AnimationNodeStateMachineTransition_4ylk1"), "Idle", "Hurt", SubResource("AnimationNodeStateMachineTransition_hduhk"), "Attack", "Hurt", SubResource("AnimationNodeStateMachineTransition_rqikp"), "Hurt", "Dead", SubResource("AnimationNodeStateMachineTransition_wixrx"), "Idle", "Dead", SubResource("AnimationNodeStateMachineTransition_hpua4")]
graph_offset = Vector2(-219, -22)

[node name="Thug" type="CharacterBody2D"]
z_index = 10
y_sort_enabled = true
collision_layer = 4
collision_mask = 13
script = ExtResource("1_kkr6x")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 10)
shape = SubResource("RectangleShape2D_wmkt7")

[node name="Hinge" type="Node2D" parent="."]
position = Vector2(0, -9)
scale = Vector2(-1, 1)

[node name="Sprite2D" type="Sprite2D" parent="Hinge"]
texture_filter = 1
texture = ExtResource("1_je0g2")
hframes = 27

[node name="Shock" type="Sprite2D" parent="Hinge"]
z_index = 1
texture_filter = 1
position = Vector2(7, -14)
texture = ExtResource("3_eecof")

[node name="BOXES" type="Node2D" parent="Hinge"]

[node name="Hitbox" parent="Hinge/BOXES" instance=ExtResource("3_hio2p")]
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hinge/BOXES/Hitbox"]
position = Vector2(15, 0)
shape = SubResource("RectangleShape2D_af2hp")

[node name="Hurtbox" parent="Hinge/BOXES" instance=ExtResource("4_idwix")]
collision_layer = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hinge/BOXES/Hurtbox"]
position = Vector2(0, -1)
shape = SubResource("RectangleShape2D_0s0yk")

[node name="Eyes" type="Area2D" parent="."]
position = Vector2(0, -9)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Eyes"]
shape = SubResource("RectangleShape2D_40yny")
debug_color = Color(0.701961, 0, 0, 0.0509804)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_px8xr")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_1bfio")
anim_player = NodePath("../AnimationPlayer")

[node name="JOHNUI" parent="." instance=ExtResource("2_oxvks")]
offset_top = -10.0
offset_bottom = -10.0
metadata/_edit_use_anchors_ = true

[node name="Sounds" type="Node" parent="."]

[node name="Alert" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource("6_t0mlw")
bus = &"Sound"

[node name="Attacked" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource("9_n3yv2")
bus = &"Sound"

[node name="Die" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource("7_4ipkq")
bus = &"Sound"

[node name="Hurt" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource("8_d83s2")
bus = &"Sound"

[node name="Parried" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource("9_ud3vm")
bus = &"Sound"

[node name="TIMERS" type="Node" parent="."]

[node name="WanderTimer" type="Timer" parent="TIMERS"]
one_shot = true

[node name="ChillTimer" type="Timer" parent="TIMERS"]
wait_time = 3.0
one_shot = true

[node name="AttackTimer" type="Timer" parent="TIMERS"]
one_shot = true

[node name="ShockTimer" type="Timer" parent="TIMERS"]
wait_time = 0.5
one_shot = true

[node name="ParriedTimer" type="Timer" parent="TIMERS"]
one_shot = true

[connection signal="body_entered" from="Eyes" to="." method="_on_eyes_body_entered"]
[connection signal="body_exited" from="Eyes" to="." method="_on_eyes_body_exited"]
[connection signal="timeout" from="TIMERS/WanderTimer" to="." method="_on_wander_timer_timeout"]
[connection signal="timeout" from="TIMERS/ChillTimer" to="." method="_on_chill_timer_timeout"]
[connection signal="timeout" from="TIMERS/ShockTimer" to="." method="_on_shock_timer_timeout"]
[connection signal="timeout" from="TIMERS/ParriedTimer" to="." method="_on_parried_timer_timeout"]
